[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprite/Dialoge_Background.png" type="Texture" id=1]
[ext_resource path="res://Sprite/k98_kn.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Scripts/enemy_one.gd" type="Script" id=5]
[ext_resource path="res://Sprite/20305395141540882611-512.png" type="Texture" id=6]
[ext_resource path="res://Scripts/party.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Battle_System.gd" type="Script" id=8]
[ext_resource path="res://Sound/Battle 2.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Battle_System" type="Node"]
script = ExtResource( 8 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Battle_background" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 2 )
centered = false

[node name="selection_arrow" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[node name="Enemy" type="Node2D" parent="."]
script = ExtResource( 4 )
enemy_count = 2

[node name="enemy_one" type="Position2D" parent="Enemy"]
position = Vector2( 56.0183, 66.2253 )
script = ExtResource( 5 )
selected = true

[node name="Selected_Icon" type="Sprite" parent="Enemy/enemy_one"]
position = Vector2( 0, -53.4253 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )

[node name="enemy_two" type="Position2D" parent="Enemy"]
position = Vector2( 152.018, 66.2253 )
script = ExtResource( 5 )

[node name="Selected_Icon" type="Sprite" parent="Enemy/enemy_two"]
position = Vector2( 0, -53.4253 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="enemy_three" type="Position2D" parent="Enemy"]
position = Vector2( 253.518, 66.2253 )
script = ExtResource( 5 )

[node name="Selected_Icon" type="Sprite" parent="Enemy/enemy_three"]
position = Vector2( 0, -53.4253 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Attack_Screen" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interactive_Button" type="MarginContainer" parent="Attack_Screen"]
anchor_bottom = 1.0
margin_right = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Attack_Screen/Interactive_Button"]
margin_right = 64.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="attack" type="Button" parent="Attack_Screen/Interactive_Button/VBoxContainer"]
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 64, 20 )
custom_fonts/font = SubResource( 1 )
text = "attack"

[node name="attack2" type="Button" parent="Attack_Screen/Interactive_Button/VBoxContainer"]
margin_top = 24.0
margin_right = 64.0
margin_bottom = 44.0
rect_min_size = Vector2( 64, 20 )
custom_fonts/font = SubResource( 1 )
text = "item"

[node name="party" type="HBoxContainer" parent="Attack_Screen"]
margin_left = 70.0
margin_top = 4.0
margin_right = 314.0
margin_bottom = 56.0
size_flags_horizontal = 3
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
max_party = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 2 )

[node name="Enter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="Attack_Screen/Interactive_Button/VBoxContainer/attack" to="Enemy" method="_on_attack_pressed"]
